[package]
authors = ["Orvar Segerström <orvarsegerstrom@gmail.com>"]
description = "Run commands with all output displayed on a single line for cleaner terminal output"
edition = "2021"
exclude = [".vscode", "flake.nix", "flake.lock"]
keywords = ["cli", "terminal", "command-runner", "output-formatter", "utility"]
license = "MIT"
name = "oneline"
readme = "README.md"
repository = "https://github.com/0rvar/oneline"
version = "0.1.1"

[dependencies]
regex = "1.11.1"
termion = "4.0.5"

[profile.release]
opt-level = "z"
strip = true
